Fixes: Card Alignments

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body {
   font-family: "Muli", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 #loading {
@@ -155,6 +155,7 @@ body {
 
 aside {
   position: fixed;
+  z-index: 10;
 }
 
 .sidebar {
@@ -253,14 +254,10 @@ label #cancel {
   margin-left: 250px;
 }
 
-main {
-  width: 100%;
-}
-
 #hero {
   position: relative;
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 370px;
   background: url(./images/background.jpg) no-repeat;
   background-size: cover;
@@ -286,7 +283,6 @@ main {
   display: flex;
   overflow: hidden;
   /* transition: height 1s, color 1s, margin 1s; */
-  z-index: 1;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   line-height: 110%;
 }
@@ -735,6 +731,11 @@ figcaption {
 .tech-child ul li {
   line-height: 25px;
   color: #616161;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-section {
